# learning_fastapi

./: .gitignore  Makefile  database.py  logger.py  main.py  models.py  pyproject.toml  todo.md  typeModels.py
alembic/: env.py
alembic/versions/: 1a7e1d99a647_add_change.py  1d5378cf6570_new_migration.py  5821894269c3_add_change.py
routes/: login.py  webrtc.py
tmp/: database.db
utils/: auth.py  config.py  encrypt.py  limitter.py  seeders.py
